--- a/azure-template-tox-job.yml
+++ b/azure-template-tox-job.yml
@@ -167,16 +167,16 @@ jobs:
               cibuildwheel --output-dir "$(System.DefaultWorkingDirectory)/dist" .
             displayName: Build wheels with cibuildwheel
           #
-          - script: python setup.py  sdist --dist-dir "$(System.DefaultWorkingDirectory)/udist"
-            displayName: "Build source dist"
+          #- script: python setup.py  sdist --dist-dir "$(System.DefaultWorkingDirectory)/udist"
+          #  displayName: "Build source dist"
           #
           # Check the install artifacts
-          - script: ls -lR "$(System.DefaultWorkingDirectory)/dist" "$(System.DefaultWorkingDirectory)/udist"
+          - script: ls -lR "$(System.DefaultWorkingDirectory)/dist" "$(System.DefaultWorkingDirectory)/dist"
             displayName: "Listing of installed software"
           #
           - publish: $(System.DefaultWorkingDirectory)/dist
             artifact: ${{ format('sw_{0}_{1}', parameters.tox, parameters.os) }}
           #
-          - publish: $(System.DefaultWorkingDirectory)/udist
-            artifact: ${{ format('sw_u_{0}_{1}', parameters.tox, parameters.os) }}
+          #- publish: $(System.DefaultWorkingDirectory)/udist
+          #  artifact: ${{ format('sw_u_{0}_{1}', parameters.tox, parameters.os) }}
         #
