Chore: update ci pipeline adding linux binary wheel

--- a/azure-template-publish-job.yml
+++ b/azure-template-publish-job.yml
@@ -67,7 +67,7 @@ jobs:
         displayName: "Install package dependencies"
       - script: pip install -e .
         displayName: "Install package locally"
-      - script: pip install mkdocs
+      - script: pip install -r requirements-doc.txt
         displayName: "Install documentation dependencies"
       #
       #- script: |
