Update to tox 4.0

--- a/tox.ini
+++ b/tox.ini
@@ -39,31 +39,33 @@ coverage_cutoff = 60
 envlist = format_pep8-{py39}, lint_pylint-{py39}, format_black-{py39}, py{39,27}, test_coverage-{py39}
 #
 #
-minversion = 3.4.15
+minversion = 3.4.0
 skip_missing_interpreters = true
 skipsdist = false
 
 [testenv]
 passenv = CONFIG_SUPPORT_TOKEN_ENV
-whitelist_externals = echo
-deps = echo
+allowlist_externals = echo
 skipsdist = false
 commands =
     echo "Starting default tests in testenv"
+basepython = py312: python3.12
+            py311: python3.11
+            py310: python3.10
+            py39: python3.9
+            py27: python2.7
 
 [testenv:py27]
 description = 'Run unit tests (unittest runner) using {envpython}'
-whitelist_externals = echo
 platform=
        macos: darwin
        linux: linux
-basepython =  python2.7
 skip_install = false
 skipsdist = false
 recreate = true
 alwayscopy=true
 usedevelop=true
-deps = echo
+deps = 
        -r requirements.txt
 commands =
     echo "Starting {envname}"
@@ -74,19 +76,17 @@ commands =
     {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_4} --pattern "{[local_settings]test_pattern}"
     echo "Completed {envname}"
 
-[testenv:py39]
+[testenv:py3{9,10,11,12}]
 description = 'Run unit tests (unittest runner) using {envpython}'
-whitelist_externals = echo
 platform=
        macos: darwin
        linux: linux
-basepython = python3.9
 skip_install = false
+skipsdist = false
 recreate = true
 alwayscopy=true
 usedevelop=true
-skipsdist = false
-deps = echo
+deps = 
        -r requirements.txt
 commands =
     echo "Starting {envname}"
@@ -96,17 +96,15 @@ commands =
     {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_3} --pattern "{[local_settings]test_pattern}"
     {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_4} --pattern "{[local_settings]test_pattern}"
     echo "Completed {envname}"
+
 
 #
-[testenv:format_pep8-py39]
+[testenv:format_pep8-py3{9,10,11,12}]
 description = 'Run selected PEP8 compliance checks (flake8)'
 platform=
        macos: darwin
        linux: linux
-whitelist_externals = echo
-basepython = python3.9
 deps =
-    echo
     flake8
     # This plugin is no longer compatible with latest pydocstyles -
     # flake8-docstrings>=0.2.7
@@ -117,16 +115,13 @@ commands =
     flake8 --max-line-length=185 --ignore=D,I,E203,W503  {[local_settings]source_paths}
 
 #
-[testenv:lint_pylint-py39]
+[testenv:lint_pylint-py3{9,10,11,12}]
 description = 'Run linting compliance checks (pylint)'
 platform=
        macos: darwin
        linux: linux
-whitelist_externals = echo
-basepython = python3.9
 
 deps =
-    echo
     pylint
     -r requirements.txt
 commands =
@@ -135,15 +130,12 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:format_black-py39]
+[testenv:format_black-py3{9,10,11,12}]
 description = 'Run format compliance checks (black)'
 platform=
        macos: darwin
        linux: linux
-whitelist_externals = echo
-basepython = python3.9
 deps =
-    echo
     black>=21.5b1
     -r requirements.txt
     #    isort>=4.3.20
@@ -154,19 +146,16 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:test_coverage-py39]
+[testenv:test_coverage-py3{9,10,11,12}]
 description = 'Run test coverage analysis'
 platform=
        macos: darwin
        linux: linux
-whitelist_externals = echo
-basepython = python3.9
 recreate = true
 alwayscopy=true
 usedevelop=true
 skipsdist = false
 deps =
-    echo
     coverage
     -r requirements.txt
 
