Update cibuildwheel and cross compile for arm64 on macos

--- a/azure-template-tox-job.yml
+++ b/azure-template-tox-job.yml
@@ -154,7 +154,7 @@ jobs:
       #  Build artifacts if this is a test target (i.e. labeled as py##)
       #
       - ? ${{ if and( startsWith(parameters.tox, 'py'), not(startsWith(parameters.python, '2.7')) ) }}
-        : - script: pip install --upgrade pip twine setuptools wheel cibuildwheel==2.11.2
+        : - script: pip install --upgrade pip twine setuptools wheel cibuildwheel==2.16.2
             displayName: "Install build tools"
           - script: python setup.py  sdist --dist-dir "$(System.DefaultWorkingDirectory)/dist"
             displayName: "Build source distribution"
@@ -163,6 +163,7 @@ jobs:
           #
           - script: |
               rm -rf "$(System.DefaultWorkingDirectory)/build"
+              export CIBW_ARCHS_MACOS="x86_64 arm64"
               cibuildwheel --config cibuildwheel.toml --output-dir "$(System.DefaultWorkingDirectory)/dist" .
             displayName: "Build binary wheels"
           #
