--- a/azure-template-publish-job.yml
+++ b/azure-template-publish-job.yml
@@ -16,7 +16,7 @@ jobs:
   - job: ${{ format('publish_{0}_{1}', parameters.tox, parameters.os) }}
     pool:
       ${{ if eq(parameters.os, 'macos') }}:
-        vmImage: "macOS-11"
+        vmImage: "macOS-latest"
       ${{ if eq(parameters.os, 'linux') }}:
         vmImage: "ubuntu-latest"
     dependsOn:
