--- a/tox.ini
+++ b/tox.ini
@@ -49,10 +49,14 @@ allowlist_externals = echo
 skipsdist = false
 commands =
     echo "Starting default tests in testenv"
-basepython = py312: python3.12
+basepython = py313: python3.13
+            py312: python3.12
             py311: python3.11
             py310: python3.10
             py39: python3.9
+            py38: python3.8
+            py37: python3.7
+            py36: python3.6
             py27: python2.7
 
 [testenv:py27]
@@ -76,7 +80,7 @@ commands =
     {envpython} -m unittest discover -v --start-directory {[local_settings]test_path_4} --pattern "{[local_settings]test_pattern}"
     echo "Completed {envname}"
 
-[testenv:py3{9,10,11,12}]
+[testenv:py3{6,7,8,9,10,11,12,13}]
 description = 'Run unit tests (unittest runner) using {envpython}'
 platform=
        macos: darwin
@@ -99,7 +103,7 @@ commands =
 
 
 #
-[testenv:format_pep8-py3{9,10,11,12}]
+[testenv:format_pep8-py3{6,7,8,9,10,11,12,13}]
 description = 'Run selected PEP8 compliance checks (flake8)'
 platform=
        macos: darwin
@@ -115,7 +119,7 @@ commands =
     flake8 --max-line-length=185 --ignore=D,I,E203,W503  {[local_settings]source_paths}
 
 #
-[testenv:lint_pylint-py3{9,10,11,12}]
+[testenv:lint_pylint-py3{6,7,8,9,10,11,12,13}]
 description = 'Run linting compliance checks (pylint)'
 platform=
        macos: darwin
@@ -130,7 +134,7 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:format_black-py3{9,10,11,12}]
+[testenv:format_black-py3{6,7,8,9,10,11,12,13}]
 description = 'Run format compliance checks (black)'
 platform=
        macos: darwin
@@ -146,7 +150,7 @@ commands =
     echo "Completed {envname}"
 
 #
-[testenv:test_coverage-py3{9,10,11,12}]
+[testenv:test_coverage-py3{6,7,8,9,10,11,12,13}]
 description = 'Run test coverage analysis'
 platform=
        macos: darwin
